--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 	<!--|  Brought To You By: <///:™  |-->     
 	<title>Custom Tabs</title>                                                           
 	
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />		
-	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0, minimum-scale=1.0, maximum-scale=1">
+	<meta charset="UTF-8">	
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
 	<!--Google fonts-->
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,800,600' rel='stylesheet' type='text/css'>
